--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.404p3rs0n.github.io/'
+baseURL = 'https://404p3rs0n.github.io/'
 languageCode = 'zh-CN'
 title = '404p3rs0n'
 theme = 'LoveIt'
