--- a/hugo.toml
+++ b/hugo.toml
@@ -632,8 +632,9 @@ enableEmoji = true
 # Permalinks config (https://gohugo.io/content-management/urls/#permalinks)
 # Permalinks 配置 (https://gohugo.io/content-management/urls/#permalinks)
 [Permalinks]
-  posts = ":year/:month/:filename"
+  # posts = ":year/:month/:filename"
   # posts = ":filename"
+  posts = ":year/:month/:slug"
 
 # Privacy config (https://gohugo.io/about/hugo-and-gdpr/)
 # 隐私信息配置 (https://gohugo.io/about/hugo-and-gdpr/)
