--- a/hugo.toml
+++ b/hugo.toml
@@ -634,7 +634,7 @@ enableEmoji = true
 [Permalinks]
   # posts = ":year/:month/:filename"
   # posts = ":filename"
-  posts = ":year/:month/:slug"
+  posts = ":year/:slug"
 
 # Privacy config (https://gohugo.io/about/hugo-and-gdpr/)
 # 隐私信息配置 (https://gohugo.io/about/hugo-and-gdpr/)
